# keyboard-project

./: .gitignore  Cargo.toml  README.md
docs/: energy.md  protocol.md
firmware/debugger/: Cargo.toml  README.md  build.rs  memory.x  pinout.md  stm-info.md
firmware/debugger/c/: board.c  display.c  stm32f7xx_hal_conf.h
firmware/debugger/src/: main.rs
firmware/dongle/: README.md
firmware/feather-fw/: .gitignore  Cargo.toml  README.md  build.rs
firmware/feather-fw/src/: main.rs
firmware/keyboard/: README.md
firmware/keyboard-skeleton/: Cargo.toml
firmware/keyboard-skeleton/src/: main.rs
firmware/led-test/: Cargo.toml  README.md  build.rs
firmware/led-test/.cargo/: config.toml
firmware/led-test/src/: main.rs
firmware/radio-rx/: Cargo.toml  README.md  build.rs  memory.x
firmware/radio-rx/src/: main.rs
firmware/radio-tx/: Cargo.toml  README.md  build.rs
firmware/radio-tx/src/: main.rs
host-sim/: Cargo.toml
host-sim/src/: main.rs
proto/: Cargo.toml
proto/src/: aead.rs  backend.rs  lib.rs  sim.rs
proto/tests/: flow_basic.rs  mock_rf.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs  warm_wake.rs  warm_wake_rf.rs
