[package]
name = "proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[features]
default = ["std", "crypto"]
std = []
alloc = []
crypto = ["chacha20poly1305", "std"]
proptest = ["std"]

[dependencies]
chacha20poly1305 = { version = "0.10", default-features = false, features = ["std"], optional = true }
subtle = { version = "2.6", default-features = false }

[dev-dependencies]
proptest = { package = "proptest", version = "1" }
