[package]
name = "debugger-fw"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"
rtt-target = { version = "0.4" }
stm32f7 = { version = "0.15", features = ["stm32f7x6", "rt"] }

[build-dependencies]
cc = "1"

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]
