[package]
name = "feather-fw"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
nrf52840-hal = { version = "0.17", features = ["rt"] }
panic-halt = "0.2"
embedded-hal = "0.2"
usbd-serial = "0.1"
usb-device = "0.2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = "s"

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]
